@@ -1375,6 +1375,10 @@ public class TownySettings {
         return getInt(ConfigNodes.VERSION_BUKKIT);
 	}
 	
+	public static boolean isBypassVersionCheck() {
+		return getBoolean(ConfigNodes.VERSION_BUKKIT_BYPASS);
+	}
+	
 	public static boolean isTownyUpToDate(String currentVersion) {
 		return currentVersion.equals(getLastRunVersion(currentVersion));
 	}
