@@ -1018,3 +1018,4 @@ v0.77.1.33:
 	  At a new day the negative upkeep will be used to calculate the towns upkeep, but
 	  instead of taking it from the town, it will be divided between the plot owners.
 	  These funds are paid by the server, not the town.
+	- You can now disable the CraftBukkit version check if you wish to take a risk with untested builds (bypass_version_check).
